<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="clear_search">Очистить поисковый запрос</string>
    <string name="empty_library_text">Ваша медиатека пуста</string>
    <string name="empty_library">Иллюстрация пустой медиатеки</string>
    <string name="tracks">Треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="share_app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_message">Привет! Посмотри курс по Android-разработке в Практикуме: %s</string>
    <string name="support_email">IgnatenkoMikel@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_chooser_title">Поделиться через</string>
    <string name="mail_chooser_title">Отправить письмо</string>
    <string name="nothing_found">Ничего не нашлось</string>>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history_label">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
</resources>