<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainContainer"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/panel_header"
        style="@style/HeaderContainer"
        android:layout_marginBottom="@dimen/gap_24">

        <TextView
            style="@style/HeaderTitle.Main"
            android:text="@string/app_name" />

        <ImageView
            style="@style/HeaderIcon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/gap_16"
        android:paddingEnd="@dimen/gap_16"
        android:paddingBottom="@dimen/gap_16">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            style="@style/MainMenuButton"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/library"
            style="@style/MainMenuButton"
            android:text="@string/library"
            app:icon="@drawable/ic_media" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            style="@style/MainMenuButton.Last"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout>
