<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainContainer"
    android:background="@color/library_background">

    <LinearLayout
        android:id="@+id/panel_header"
        style="@style/HeaderContainer">

        <TextView
            style="@style/HeaderTitle"
            android:text="@string/library"
            android:textColor="@color/library_text_primary"/>

        <ImageView
            style="@style/HeaderIcon"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/library_background">

        <LinearLayout
            android:id="@+id/tab_left"
            style="@style/LibraryTab">

            <TextView
                style="@style/LibraryTabText"
                android:text="@string/tracks" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_indicator_height"
                android:layout_marginLeft="@dimen/tab_indicator_margin_horizontal"
                android:layout_marginRight="@dimen/tab_indicator_margin_horizontal"
                android:background="@color/library_tab_indicator"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_right"
            style="@style/LibraryTab">

            <TextView
                style="@style/LibraryTabText"
                android:text="@string/playlists" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_indicator_height"
                android:layout_marginLeft="@dimen/tab_indicator_margin_horizontal"
                android:layout_marginRight="@dimen/tab_indicator_margin_horizontal"
                android:background="@color/library_tab_indicator" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/gap_24">

        <ImageView
            style="@style/LibraryEmptyImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/empty_library"
            android:layout_marginBottom="@dimen/gap_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_library_text"
            android:textSize="19sp"
            android:textColor="@color/library_text_primary"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:lineHeight="22sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/tab_bar_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal"
        android:background="@color/library_background">

        <LinearLayout
            android:id="@+id/tab_search"
            style="@style/NavigationTab">

            <ImageView
                style="@style/NavigationTabIcon"
                android:src="@drawable/ic_search"/>

            <TextView
                style="@style/NavigationTabText"
                android:text="@string/search" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_library"
            style="@style/NavigationTab">

            <ImageView
                style="@style/NavigationTabIcon"
                android:src="@drawable/ic_media"
                app:tint="@color/tab_active" />

            <TextView
                style="@style/NavigationTabText"
                android:text="@string/library"
                android:textColor="@color/tab_active" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_settings"
            style="@style/NavigationTab">

            <ImageView
                style="@style/NavigationTabIcon"
                android:src="@drawable/ic_settings" />

            <TextView
                style="@style/NavigationTabText"
                android:text="@string/settings" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>