<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/gap_12"
        android:layout_marginBottom="@dimen/gap_16">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:src="@drawable/ic_back"
            app:tint="@color/icon_tint"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/gap_12"
            android:contentDescription="@string/back"/>
        <TextView
            android:layout_width="@dimen/zero_size"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/header_size"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:includeFontPadding="false" />
        <ImageView
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:src="@drawable/ic_search"
            android:visibility="gone"
            app:tint="@color/icon_tint"
            android:padding="@dimen/gap_12"
            android:contentDescription="@string/search"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/gap_16"
            android:paddingEnd="@dimen/gap_16"
            android:background="@color/settings_background">
            <TextView
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark_theme"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/settings_size"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:includeFontPadding="false" />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:trackColor="@color/track_color"
                app:thumbColor="@color/knob_color"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/gap_16"
            android:paddingEnd="@dimen/gap_16"
            android:background="@color/settings_background">

            <TextView
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/settings_size"
                android:fontFamily="sans-serif" />

            <ImageView
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:src="@drawable/ic_share"
                app:tint="@color/icon_tint"
                android:contentDescription="@string/share"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/gap_16"
            android:paddingEnd="@dimen/gap_16"
            android:background="@color/settings_background">

            <TextView
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/support"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/settings_size"
                android:fontFamily="sans-serif" />

            <ImageView
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:src="@drawable/ic_support"
                app:tint="@color/icon_tint"
                android:contentDescription="@string/share"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/gap_16"
            android:paddingEnd="@dimen/gap_16"
            android:background="@color/settings_background">

            <TextView
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_agreement"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/settings_size"
                android:fontFamily="sans-serif" />

            <ImageView
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:src="@drawable/ic_forward"
                app:tint="@color/icon_tint"
                android:contentDescription="@string/user_agreement"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>